--- a/src/app/components/users/insertarus/insertarus.component.html
+++ b/src/app/components/users/insertarus/insertarus.component.html
@@ -1,10 +1,13 @@
 <div class="title-container">
-  <div class="container" style="text-align: center;margin:5%" *ngIf="!edicion"><h1>Registro de Usuario</h1></div>
-  <div class="container" style="text-align: center;margin:5%" *ngIf="edicion"><h1>Baja de Usuario</h1></div>
+  <div class="container" style="text-align: center; margin: 5%;" *ngIf="!edicion">
+    <h1>Registro de Usuario</h1>
+  </div>
+  <div class="container" style="text-align: center; margin: 5%;" *ngIf="edicion">
+    <h1>Baja de Usuario</h1>
+  </div>
 
-  <div class="container" style="text-align: center" *ngIf="edicion">
-    <form [formGroup]="form" (submit)="insertar()" >
-
+  <div class="container" style="text-align: center;" *ngIf="edicion">
+    <form [formGroup]="form" (submit)="insertar()">
       <mat-form-field class="example-full-width">
         <mat-label>Código</mat-label>
         <input matInput formControlName="hcodigo" readonly="true"/>
@@ -27,119 +30,109 @@
         <mat-label>Correo</mat-label>
         <input matInput placeholder="example@gmail.com" formControlName="hcorreo" readonly="true"/>
       </mat-form-field>
-
       <br />
+
       <mat-form-field class="example-full-width">
         <mat-label>Certificado</mat-label>
         <input matInput placeholder="imagen" formControlName="hcertificado" readonly="true"/>
       </mat-form-field>
-
       <br />
 
       <mat-form-field class="example-full-width">
         <mat-label>Contraseña</mat-label>
         <input matInput placeholder="contraseña" formControlName="hpassword" readonly="true"/>
       </mat-form-field>
-
       <br />
 
-
-      <div style="text-align: center">
+      <div style="text-align: center;">
         <mat-checkbox class="example-margin" formControlName="henabled" [disabled]="edicion">Estado Usuario</mat-checkbox>
       </div>
 
-      <div style="text-align: center">
+      <div style="text-align: center;">
         <button mat-flat-button (click)="darDeBaja()" color="warn">Dar de Baja a Usuario</button>
       </div>
     </form>
   </div>
 
   <div>
-    <mat-stepper *ngIf="!edicion"
-    class="example-stepper"
-    [orientation]="(stepperOrientation | async)!" #stepper>
-    <mat-step [stepControl]="firstFormGroup" label="Rellena con tus datos" errorMessage="Complete el formulario.">
-      <form [formGroup]="firstFormGroup">
-        <div>
-          <br />
-          <mat-form-field class="example-full-width">
-            <mat-label>Nombre Completo</mat-label>
-            <input matInput placeholder="Nombres y Apellidos" formControlName="hnombre" required="true"/>
-            <mat-error *ngIf="firstFormGroup.get('hnombre')?.hasError('required')">
-              Campo obligatorio.</mat-error>
-          </mat-form-field>
-          <br />
+    <mat-stepper *ngIf="!edicion" class="example-stepper" [orientation]="(stepperOrientation | async)!" #stepper>
+      <mat-step [stepControl]="firstFormGroup" label="Rellena con tus datos" errorMessage="Complete el formulario.">
+        <form [formGroup]="firstFormGroup">
+          <div>
+            <br />
+            <mat-form-field class="example-full-width">
+              <mat-label>Nombre Completo</mat-label>
+              <input matInput placeholder="Nombres y Apellidos" formControlName="hnombre" required="true"/>
+              <mat-error *ngIf="firstFormGroup.get('hnombre')?.hasError('required')">
+                Campo obligatorio.
+              </mat-error>
+            </mat-form-field>
+            <br />
 
-          <mat-form-field class="example-full-width">
-            <mat-label>Nombre de Usuario</mat-label>
-            <input matInput placeholder="Nombre de Usuario" formControlName="husername" required="true"/>
-            <mat-error *ngIf="firstFormGroup.get('husername')?.hasError('required')">
-              Campo obligatorio.</mat-error>
-          </mat-form-field>
-          <br />
+            <mat-form-field class="example-full-width">
+              <mat-label>Nombre de Usuario</mat-label>
+              <input matInput placeholder="Nombre de Usuario" formControlName="husername" required="true"/>
+              <mat-error *ngIf="firstFormGroup.get('husername')?.hasError('required')">
+                Campo obligatorio.
+              </mat-error>
+            </mat-form-field>
+            <br />
 
-          <mat-form-field class="example-full-width">
-            <mat-label>Correo</mat-label>
-            <input type="email" matInput formControlName="hcorreo" placeholder="email@example.com">
+            <mat-form-field class="example-full-width">
+              <mat-label>Correo</mat-label>
+              <input type="email" matInput formControlName="hcorreo" placeholder="email@example.com"/>
+            </mat-form-field>
+            <br />
 
-            
-          </mat-form-field>
-          <br />
-
-          <mat-form-field class="example-full-width">
-            <mat-label>Generá tu Contraseña</mat-label>
-            <input formControlName="hpassword" matInput [type]="hide() ? 'password' : 'text'" />
-            <mat-error *ngIf="firstFormGroup.get('hpassword')?.hasError('required')">
-            Campo obligatorio.</mat-error>
-            <button
-              mat-icon-button
-              matSuffix
-              (click)="clickEvent($event)"
-              [attr.aria-label]="'Hide password'"
-              [attr.aria-pressed]="hide()"
-            >
-            <mat-icon>{{hide() ? 'visibility_off' : 'visibility'}}</mat-icon>
-            </button>
-          </mat-form-field>
-
-        </div>
-        <div>
-          <button mat-button matStepperNext>Next</button>
-        </div>
-      </form>
-    </mat-step>
-    <mat-step [stepControl]="secondFormGroup" label="Choose an option" errorMessage="Escoja su Rol.">
-      <form [formGroup]="secondFormGroup">
-        <div class="button-container">
-          <button mat-button matStepperNext (click)="setAttributeValue('PACIENTE')">Paciente</button>
-          <button mat-button matStepperNext (click)="setAttributeValue('NUTRICIONISTA')">Nutricionista</button>
-          <button mat-button matStepperNext (click)="setAttributeValue('DOCTOR')">Doctor</button>
-        </div>
-        <button mat-button matStepperPrevious>Back</button>
-      </form>
-    </mat-step>
-    <mat-step [stepControl]="thirdFormGroup" label="Fill out your phone number">
-      <form [formGroup]="thirdFormGroup">
-        <div *ngIf="showCertificado">
-          <mat-form-field class="example-full-width">
-            <mat-label>Certificado</mat-label>
-            <input matInput placeholder="imagen" formControlName="hcertificado" />
-          </mat-form-field>
-          <div *ngIf="complete">
-            <router-outlet></router-outlet>
+            <mat-form-field class="example-full-width">
+              <mat-label>Generá tu Contraseña</mat-label>
+              <input formControlName="hpassword" matInput [type]="hide() ? 'password' : 'text'"/>
+              <mat-error *ngIf="firstFormGroup.get('hpassword')?.hasError('required')">
+                Campo obligatorio.
+              </mat-error>
+              <button mat-icon-button matSuffix (click)="clickEvent($event)" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide()">
+                <mat-icon>{{hide() ? 'visibility_off' : 'visibility'}}</mat-icon>
+              </button>
+            </mat-form-field>
+          </div>
+          <div>
+            <button mat-button matStepperNext>Next</button>
+          </div>
+        </form>
+      </mat-step>
+      <mat-step [stepControl]="secondFormGroup" label="Choose an option" errorMessage="Escoja su Rol.">
+        <form [formGroup]="secondFormGroup">
+          <div class="button-container">
+            <button mat-button matStepperNext (click)="setAttributeValue('PACIENTE')">Paciente</button>
+            <button mat-button matStepperNext (click)="setAttributeValue('NUTRICIONISTA')">Nutricionista</button>
+            <button mat-button matStepperNext (click)="setAttributeValue('DOCTOR')">Doctor</button>
+          </div>
+          <button mat-button matStepperPrevious>Back</button>
+        </form>
+      </mat-step>
+      <mat-step [stepControl]="thirdFormGroup" label="Fill out your phone number">
+        <form [formGroup]="thirdFormGroup">
+          <div class="flex-container" *ngIf="showCertificado">
+            <mat-form-field class="example-full-width">
+              <mat-label>Certificado</mat-label>
+              <input matInput placeholder="imagen" formControlName="hcertificado"/>
+            </mat-form-field>
+            <div *ngIf="complete">
+              <router-outlet></router-outlet>
               <div [hidden]="route.children.length !== 0">
                 <app-crearhp [routerLink]="['nuevohp', role.user.idUser]"></app-crearhp>
               </div>
+            </div>
           </div>
+          <div>
+            <button mat-button matStepperPrevious>Back</button>
+            <button mat-flat-button color="primary" [disabled]="complete" (click)="transferStepperDataToForm(); insertar()">Registrar</button>
+          </div>
+        </form>
+        <div style="text-align: center;">
+          <button mat-flat-button (click)="enrutar()" *ngIf="complete" class="button-terminar">Terminar</button>
         </div>
-        <div>
-          <button mat-button matStepperPrevious>Back</button>
-          <button mat-flat-button color="warn" [disabled]="complete" (click)="transferStepperDataToForm(); insertar()">Registrar</button>
-        </div>
-      </form>
-      <button mat-flat-button color="warn" (click)="enrutar()" *ngIf="complete">Terminar</button>
-    </mat-step>
-  </mat-stepper>
+      </mat-step>
+    </mat-stepper>
   </div>
 </div>
-
